--- a/index.html
+++ b/index.html
@@ -6,58 +6,88 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <title>REGINA IUSITIAE</title>
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/css/ionicons.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext" rel="stylesheet">
   <script src="assets/js/modernizr-2.8.3.min.js"></script>
 </head>
 <body >
-  <nav class="navbar navbar-default">
-    <a class="navbar-brand" href="#">
-      <span>
-        <img src="assets/img/logo.png" style="height: 116px; width: 90px;" />
-      </span>
-      <span class="navbar-brand-title">
-        Lorem ipsum
-        <hr>
-        Lorem Ipsum
-      </span>
-    </a>
-    <div class="container">
-      <div class="navbar-header">
-        <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span><span class="icon-bar">
-        </span><span class="icon-bar"></span>
-      </button>
-    </div>
-    <div class="collapse navbar-collapse" id="navcol-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li role="presentation"><a href="index.html">HOME</a></li>
-        <li role="presentation"><a href="#">ABOUT</a></li>
-        <li role="presentation"><a href="#">ACHIEVEMENTS</a></li>
-        <li role="presentation"><a href="#">EVENTS</a></li>
-        <li role="presentation"><a href="#">NEWS</a></li>
-        <li role="presentation"><a href="#">ALUMNI</a></li>
-        <li role="presentation"><a href="#">CONTACT</a></li>
-      </ul>
-    </div>
+<!--   <nav class="navbar navbar-default">
+<a class="navbar-brand" href="#">
+<span>
+<img src="assets/img/logo.png" style="height: 116px; width: 90px;" />
+</span>
+<span class="navbar-brand-title">
+Lorem ipsum
+<hr>
+Lorem Ipsum
+</span>
+</a>
+<div class="container">
+<div class="navbar-header">
+<button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
+<span class="sr-only">Toggle navigation</span>
+<span class="icon-bar"></span><span class="icon-bar">
+</span><span class="icon-bar"></span>
+</button>
+</div>
+<div class="collapse navbar-collapse" id="navcol-1">
+<ul class="nav navbar-nav navbar-right">
+<li role="presentation"><a href="index.html">HOME</a></li>
+<li role="presentation"><a href="#">ABOUT</a></li>
+<li role="presentation"><a href="#">ACHIEVEMENTS</a></li>
+<li role="presentation"><a href="#">EVENTS</a></li>
+<li role="presentation"><a href="#">NEWS</a></li>
+<li role="presentation"><a href="#">ALUMNI</a></li>
+<li role="presentation"><a href="#">CONTACT</a></li>
+</ul>
+</div>
+</div>
+</nav> -->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">HOME</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">ABOUT</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">ACHIEVEMENTS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="events.html">EVENTS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="#">ALUMNI</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="#">CONTACT</a>
+      </li>
+    </ul>
   </div>
 </nav>
 
 
+<section class="container">
 
-
-<section class="container-fluid">
-  <div class="row">
-    <div class="header-content" align="center"> 
-      <h1> SOME BANNER HERE</h1>
-      <h2> Lorem ipsum dolor sit amet</h2>
-    </div>
-    <hr size="50">
+  <div class="header-content" align="center"> 
+    <h1> SOME BANNER HERE</h1>
+    <h2> Lorem ipsum dolor sit amet</h2>
   </div>
+  <hr size="50">
+
 </section>
+
+
 
 <section>
   <div class="container about">
@@ -107,7 +137,7 @@
           <img src="assets/img/verdict2.jpg" />
         </div>
         <div class="home-event-container-body-text">
-          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p style="text-indent: 50px; text-align: justify; padding: 30px;">Ateneo Law School bested 15 other law schools in the recent 2009 National Moot Court Competition on International Humanitarian Law sponsored by the International Committee on the Red Cross last November 18-20. Team Ateneo won as overall champion and was also given the award for Best Memorial. Regina Iustitiae’s very own Michelle Suarez (Batch 8-08) was awarded Best Mooter in the Final Rounds held at the Supreme Court En Banc Session Hall. Ateneo will be up against many of the top law schools in Asia and Australia as they represent the Philippines in the International Rounds for the Red Cross Moot Court Competition which will be held in Hong Kong, from March 5-6, 2010.</p>
         </div>
         <div class="about-read-more" align="center">
           <button type="button" class="btn-read-more">View More</button>
@@ -121,17 +151,17 @@
 
 <section>
   <div class="container news">
-    <div class="home-news-container">
+    <div class="home-news-container" align="center">
       <div class="home-news-container-title">
         <h1 >National Moot Court Competition on International Humanitarian Law</h1>
         <h3 > November 18-20, 2009</h3>
       </div>
-      <div class="home-event-container-body"> 
-        <div class="home-event-container-body-img" align="center">
+      <div class="home-news-container-body"> 
+        <div class="home-news-container-body-img" align="center">
           <img src="assets/img/news1.jpg" />
         </div>
         <div class="home-news-container-body-text">
-          <p> Ateneo Law School bested 15 other law schools in the recent 2009 National Moot Court Competition on International Humanitarian Law sponsored by the International Committee on the Red Cross last November 18-20. Team Ateneo won as overall champion and was also given the award for Best Memorial.  Regina Iustitiae’s very own Michelle Suarez (Batch 8-08) was awarded Best Mooter in the Final Rounds held at the Supreme Court En Banc Session Hall. Ateneo will be up against many of the top law schools in Asia and Australia as they represent the Philippines in the International Rounds for the Red Cross Moot Court Competition which will be held in Hong Kong, from March 5-6, 2010. </p>
+          <p style="text-indent: 50px; text-align: justify; padding: 30px;"> Ateneo Law School bested 15 other law schools in the recent 2009 National Moot Court Competition on International Humanitarian Law sponsored by the International Committee on the Red Cross last November 18-20. Team Ateneo won as overall champion and was also given the award for Best Memorial.  Regina Iustitiae’s very own Michelle Suarez (Batch 8-08) was awarded Best Mooter in the Final Rounds held at the Supreme Court En Banc Session Hall. Ateneo will be up against many of the top law schools in Asia and Australia as they represent the Philippines in the International Rounds for the Red Cross Moot Court Competition which will be held in Hong Kong, from March 5-6, 2010. </p>
         </div>
       </div>
     </div>
@@ -141,26 +171,28 @@
 
 <footer>
   <section>
-    <div class="footer-header" align="center">
-      <img src="assets/img/logo.png" />
-      <h4>REGINA IUSITIAE</h4>
-      <h5>REGINA IUSITIAE</h5>
-    </div>
+    <div class="container">
+      <div class="footer-header" align="center">
+        <img src="assets/img/logo.png" />
+        <h4>REGINA IUSITIAE</h4>
+        <h5>REGINA IUSITIAE</h5>
+      </div>
 
-    <div class="footer-body">
-      <div class="row">
-        <div class="col-sm-3"></div>
-        <div class="col-sm-3"></div>
-        <div class="col-sm-3"></div>
-        <div class="col-sm-3"></div>
+      <div class="footer-body">
+        <div class="row">
+          <div class="col-sm-3"></div>
+          <div class="col-sm-3"></div>
+          <div class="col-sm-3"></div>
+          <div class="col-sm-3"></div>
+        </div>
       </div>
     </div>
+
   </section>
 </footer>
-
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery-1.11.3.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 
