--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Lorem Ipsum
 </nav> -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top">  <span> This is a test <hr style="margin:0px; "> Another Test  </span>  </a>
+  <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae  <hr style="margin:0px; "> Another Test  </span>  </a>
   <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -65,6 +65,9 @@ Lorem Ipsum
       </li>
       <li class="nav-item">
         <a class="nav-link " href="events.html">EVENTS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="news.html">NEWS</a>
       </li>
       <li class="nav-item">
         <a class="nav-link " href="alumni.html">ALUMNI</a>
@@ -126,7 +129,10 @@ Lorem Ipsum
 </section>
 
 <section>
-  <div class="container events">
+
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="container events">
     <div class="home-event-container" align="center">
       <div class="home-event-container-title">
         <h1>Verdict: The Biggest Med-Law Party</h1>
@@ -140,11 +146,37 @@ Lorem Ipsum
           <p style="text-indent: 50px; text-align: justify; padding: 30px;">Ateneo Law School bested 15 other law schools in the recent 2009 National Moot Court Competition on International Humanitarian Law sponsored by the International Committee on the Red Cross last November 18-20. Team Ateneo won as overall champion and was also given the award for Best Memorial. Regina Iustitiae’s very own Michelle Suarez (Batch 8-08) was awarded Best Mooter in the Final Rounds held at the Supreme Court En Banc Session Hall. Ateneo will be up against many of the top law schools in Asia and Australia as they represent the Philippines in the International Rounds for the Red Cross Moot Court Competition which will be held in Hong Kong, from March 5-6, 2010.</p>
         </div>
         <div class="about-read-more" align="center">
-          <button type="button" class="btn-read-more">View More</button>
+          <button type="button" class="btn-read-more"><a href="events.html" style="text-decoration: none; color: #333333;"> View More News</a></button>
         </div>
       </div>
     </div>
   </div>
+
+    </div>
+    <div class="col-sm-6">
+    <div class="container news">
+    <div class="home-news-container" align="center">
+      <div class="home-news-container-title">
+        <h1 >National Moot Court Competition on International Humanitarian Law</h1>
+        <h3 > November 18-20, 2009</h3>
+      </div>
+      <div class="home-news-container-body"> 
+        <div class="home-news-container-body-img" align="center">
+          <img src="assets/img/news1.jpg" />
+        </div>
+        <div class="home-news-container-body-text">
+          <p style="text-indent: 50px; text-align: justify; padding: 30px;"> Ateneo Law School bested 15 other law schools in the recent 2009 National Moot Court Competition on International Humanitarian Law sponsored by the International Committee on the Red Cross last November 18-20. Team Ateneo won as overall champion and was also given the award for Best Memorial.  Regina Iustitiae’s very own Michelle Suarez (Batch 8-08) was awarded Best Mooter in the Final Rounds held at the Supreme Court En Banc Session Hall. Ateneo will be up against many of the top law schools in Asia and Australia as they represent the Philippines in the International Rounds for the Red Cross Moot Court Competition which will be held in Hong Kong, from March 5-6, 2010. </p>
+        </div>
+          <div class="about-read-more" align="center">
+          <button type="button" class="btn-read-more"> <a href="news.html" style="text-decoration: none; color: #333333;"> View More News</a> </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    </div>
+  </div>
+  
   <hr>
 </section>
 
