--- a/news.html
+++ b/news.html
@@ -12,63 +12,37 @@
     <script src="assets/js/modernizr-2.8.3.min.js"></script>
   </head>
   <body >
-
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae  <hr style="margin:0px; "> Another Test  </span>  </a>
+  <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+    <ul class="navbar-nav" >
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">HOME</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="about.html">ABOUT</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="achievements.html">ACHIEVEMENTS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link " href="events.html">EVENTS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="news.html">NEWS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="alumni.html">ALUMNI</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="contact.html">CONTACT</a>
       </li>
     </ul>
   </div>
-</nav> -->
-    
-    <!-- <nav class="navbar navbar-default">
-      <a class="navbar-brand" href="#">
-        <span>
-          <img src="assets/img/logo.png" style="height: 116px; width: 90px;" />
-        </span>
-        <span class="navbar-brand-title">
-         Lorem ipsum
-         <hr>
-         Lorem Ipsum
-       </span>
-     </a>
-     <div class="container">
-      <div class="navbar-header">
-       <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span><span class="icon-bar">
-      </span><span class="icon-bar"></span>
-    </button>
-  </div>
-  <div class="collapse navbar-collapse" id="navcol-1">
-   <ul class="nav navbar-nav navbar-right">
-    <li role="presentation"><a href="index.html">HOME</a></li>
-    <li role="presentation"><a href="#">ABOUT</a></li>
-    <li role="presentation"><a href="#">ACHIEVEMENTS</a></li>
-    <li role="presentation"><a href="#">EVENTS</a></li>
-    <li role="presentation"><a href="#">NEWS</a></li>
-    <li role="presentation"><a href="#">ALUMNI</a></li>
-    <li role="presentation"><a href="#">CONTACT</a></li>
-  </ul>
-</div>
-</div>
-</nav> -->
-
+</nav>
 <!-- <section class="container-fluid">
  <div class="row">
   <div class="header-content" align="center"> 
