--- a/about.html
+++ b/about.html
@@ -48,39 +48,50 @@
 </nav> -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae  <hr style="margin:0px; "> Another Test  </span>  </a>
+  <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+    <ul class="navbar-nav" >
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">HOME</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="about.html">ABOUT</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="achievements.html">ACHIEVEMENTS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link " href="events.html">EVENTS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="news.html">NEWS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="alumni.html">ALUMNI</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="contact.html">CONTACT</a>
       </li>
     </ul>
   </div>
 </nav>
 
 
+<section class="container">
 
-<section class="container-fluid">
- <div class="row">
   <div class="header-content" align="center"> 
-   <h1> SOME BANNER HERE</h1>
-   <h2> Lorem ipsum dolor sit amet</h2>
- </div>
- <hr size="50">
-</div>
+    <h1> SOME BANNER HERE</h1>
+    <h2> Lorem ipsum dolor sit amet</h2>
+  </div>
+  <hr size="50">
+
 </section>
+
+
+
 
 <section>
   <div class="container about">
@@ -159,37 +170,27 @@
 
 
 
-<section> 
-  <div class="container-fluid">
-    <nav aria-label="...">
-      <ul class="pagination pagination-md" >
-        <li class="page-item ">
-          <a class="page-link" href="#" tabindex="-1">1</a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-      </ul>
-    </nav>
-  </div>
-</section>
 
 <footer>
- <section>
-   <div class="footer-header" align="center">
-     <img src="assets/img/logo.png" />
-     <h4>REGINA IUSITIAE</h4>
-     <h5>REGINA IUSITIAE</h5>
-   </div>
+  <section>
+    <div class="container">
+      <div class="footer-header" align="center">
+        <img src="assets/img/logo.png" />
+        <h4>REGINA IUSITIAE</h4>
+        <h5>REGINA IUSITIAE</h5>
+      </div>
 
-   <div class="footer-body">
-    <div class="row">
-      <div class="col-sm-3"></div>
-      <div class="col-sm-3"></div>
-      <div class="col-sm-3"></div>
-      <div class="col-sm-3"></div>
+      <div class="footer-body">
+        <div class="row">
+          <div class="col-sm-3"></div>
+          <div class="col-sm-3"></div>
+          <div class="col-sm-3"></div>
+          <div class="col-sm-3"></div>
+        </div>
+      </div>
     </div>
-  </div>
-</section>
+
+  </section>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
