--- a/contact.html
+++ b/contact.html
@@ -46,14 +46,13 @@ Lorem Ipsum
 </div>
 </div>
 </nav> -->
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae  <hr style="margin:0px; "> Another Test  </span>  </a>
+  <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+    <ul class="navbar-nav" >
       <li class="nav-item active">
         <a class="nav-link" href="index.html">HOME</a>
       </li>
@@ -67,6 +66,9 @@ Lorem Ipsum
         <a class="nav-link " href="events.html">EVENTS</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link " href="news.html">NEWS</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link " href="alumni.html">ALUMNI</a>
       </li>
       <li class="nav-item">
@@ -75,7 +77,6 @@ Lorem Ipsum
     </ul>
   </div>
 </nav>
-
 <section class="container">
 
   <div class="header-content" align="center"> 
