--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body >
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae Sorority  <hr style="margin:0px; "> <h1 style="font-size: 25px;"> Another Test </h1>  </span>  </a>
+    <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae Sorority  <hr style="margin:0px; color:#d79b2a; "> <h1 style="font-size: 25px;"> Another Test </h1>  </span>  </a>
     <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -82,8 +82,6 @@
 
     <section>
       <div class="container about" style="padding-top: 50px;">
-
-
         <div class="about-header " align="center">
           <span class="d-inline-block">
            <hr style=" padding-right: 400px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a">
@@ -111,210 +109,179 @@
 
       <section> 
         <div class="container">
-
           <div class="achiver-header" align="center">
-              <span class="d-inline-block">
-           <hr style=" padding-right: 400px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a ;margin-bottom: 5px;" >
-           <h1 style="display: inline-block;  margin-bottom: 40px;"> Achievements</h1>
-           <hr style=" padding-right: 400px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;"></span>
 
-          </div>
-          <div class="row">
-            <div class="col-sm-6">
-              <div class="card" style="margin-left: 10px;">
+            <span class="d-inline-block">
+             <hr style=" padding-right: 400px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;">
+             <p style="display: inline-block;  margin-bottom: 40px;">Achievements</p>
+             <hr style=" padding-right: 400px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a;  margin-bottom: 5px;"></span>
+
+
+             <div class="row">
+              <div class="col-sm-6">
+                <div class="card" style="margin-left: 10px;">
+                  <div class="card-body">
+                    <img class="card-img-bottom" src="assets/img/achiever1.jpg" alt="Card image" style="width: 100%; height: 100%; padding-bottom: 20px;">
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6">
+               <div class="card" style="margin-right: 10px;">
                 <div class="card-body">
-                  <img class="card-img-bottom" src="assets/img/achiever1.jpg" alt="Card image" style="width: 100%; height: 100%; padding-bottom: 20px;">
+                  <img class="card-img-bottom" src="assets/img/achiever2.jpg" alt="Card image" style="width: 100%; height: 100%; padding-bottom: 20px;">
                 </div>
               </div>
             </div>
-            <div class="col-sm-6">
-             <div class="card" style="margin-right: 10px;">
-              <div class="card-body">
-                <img class="card-img-bottom" src="assets/img/achiever2.jpg" alt="Card image" style="width: 100%; height: 100%; padding-bottom: 20px;">
+            <div class="container" align="center">
+              <div class="about-read-more" align="center">
+                <button type="button" class="btn-read-more" style="margin-top: 50px;">View More </button>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section>
-        <span class="d-inline-block">
-           <hr style=" padding-right: 400px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a ;margin-bottom: 5px;" >
-           <h1 style="display: inline-block;  margin-bottom: 40px;"> Events</h1>
-           <hr style=" padding-right: 400px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;"></span>2
-      <div class="container">
-        <div class="row">
-         <div class="col-sm-6">
-          <div class="card" style="margin: 20px;">
-            <div class="card-body">
-              <img class="card-img-bottom" src="assets/img/verdict2.jpg" alt="Card image" style="width: 50%; height: 50%; padding-bottom: 20px;">
-              <h3 class="card-text">Verdict: The Biggest Med-Law Party</h3>
-            </div>
-          </div>
+      <section>
+        <div class="container-event">
+          <div class="event-header">
+           <span class="d-inline-block home-event-header">
+             <hr style=" padding-right: 500px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;">
+             <p style="display: inline-block;  margin-bottom: 40px;">Events</p>
+             <hr style=" padding-right: 500px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a;  margin-bottom: 5px;"></span>
+           </div>
 
-          <div class="card" style="margin: 20px;">
-            <div class="card-body">
-              <img class="card-img-bottom" src="assets/img/fortis.jpg" alt="Card image" style="width: 50%; height: 50%;">
-              <h3 class="card-text">FORTIS! Regina: Bigger, Better, Stronger at 4</h3>
+           <div class="container">
+             <div class="row">
+              <div class="col-sm-3">
+                <img class="card-img" src="assets/img/fortis.jpg" alt="Card image" style="width: 250px; height: 250px; background-size: cover;">
+              </div>
+
+              <div class="col-sm-3">
+                <img class="card-img" src="assets/img/verdict2.jpg" alt="Card image" style="width: 250px; height: 250px; background-size:cover; ">
+              </div>
+
+              <div class="col-sm-3">
+                <img class="card-img" src="assets/img/eventhome.jpg" alt="Card image" style="width: 250px; height: 250px; background-size: cover;">
+              </div>
+
+              <div class="col-sm-3">
+                <div class="view-more-event card-img" style="width: 250px; height: 250px; background-size: cover; background-color: #461251; text-align: center;">
+                  <h2> View <br/>More <br/>Events</h2>
+                </div>
+              </div>
             </div>
           </div>
         </div>
+      </section>
 
-        <div class="col-sm-6">
-          <div class="card" style="margin: 20px;">
-            <div class="card-body ">
-              <img class="card-img-bottom" src="assets/img/eventhome.jpg" alt="Card image" style="width: 100%; height: 100%;">
-              <h3 class="card-text">Lorem Ipsum</h3>
+
+      <div class="container-news">
+
+        <div class="news-header">
+          <span class="d-inline-block home-event-header">
+           <hr style=" padding-right: 500px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;">
+           <p style="display: inline-block;  margin-bottom: 40px;">News</p>
+           <hr style=" padding-right: 500px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a;  margin-bottom: 5px;"></span>
+         </div>
+
+
+         <div class="container">
+           <div class="row">
+            <div class="col-sm-3">
+             <div class="news1">
+              <img src="assets/img/news1.jpg" alt="Avatar" class="image" >
+              <div class="overlay">National Moot Court Competition on International Humanitarian Lawn</div>
             </div>
+          </div>
+
+          <div class="col-sm-3">
+            <div class=" news1">
+             <img src="assets/img/cvc.jpg" alt="Avatar" class="image" >
+             <div class="overlay">CVC Law Debates</div>
+           </div>
+         </div>
+
+         <div class="col-sm-3">
+          <div class="news1">
+            <img src="assets/img/news1.jpg" alt="Avatar" class="image" >
+            <div class="overlay">National Moot Court Competition on International Humanitarian Lawn</div>
+          </div>
+        </div>
+
+        <div class="col-sm-3">
+          <div class=" news1">
+            <img src="assets/img/news1.jpg" alt="Avatar" class="image" >
+            <div class="overlay">National Moot Court Competition on International Humanitarian Lawn</div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
-<!--         <div class="container-fluid" >
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="card">
-                <div class="card-body">
-                  <h4 class="card-title">Jane Doe</h4>
-                  <p class="card-text">Some example text some example text. Jane Doe is an architect and engineer</p>
-                  <a href="#" class="btn btn-primary">See Profile</a>
-                </div>
-                <img class="card-img-bottom" src="assets/img/logo.png" alt="Card image">
-              </div>
-          </div>
+  <div class="about-read-more" align="center">
+    <button type="button" class="btn-read-more">Read More</button>
+  </div>
 
-        <div class="col-sm-8" align="margin-right">
-            <div class="col-sm-6">
-              <div class="card">
-                <div class="card-body">
-                <img class="card-img-bottom" src="assets/img/logo.png" alt="Card image">
-                   <h4 class="card-title">Jane Doe</h4>
-                  <p class="card-text">Some example text some example text. Jane Doe is an architect and engineer</p>
-                  <a href="#" class="btn btn-primary">See Profile</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="card">
-                <div class="card-body">
-                  <h4 class="card-title">Jane Doe</h4>
-                  <p class="card-text">Some example text some example text. Jane Doe is an architect and engineer</p>
-                  <a href="#" class="btn btn-primary">See Profile</a>
-                </div>
-                <img class="card-img-bottom" src="assets/img/logo.png" alt="Card image">
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div> -->
+</div>
 
 
 
-<!--     <section>
 
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="container events">
-            <div class="home-event-container" align="center">
-              <div class="home-event-container-title">
-                <h1>Verdict: The Biggest Med-Law Party</h1>
-                <h3>December 12, 2009</h3>
-              </div>
-              <div class="home-event-container-body">
-                <div class="home-event-container-body-img" align="center">
-                  <img src="assets/img/verdict2.jpg" />
-                </div>
-                <div class="home-event-container-body-text">
-                  <p style="text-indent: 50px; text-align: justify; padding: 30px;">Ateneo Law School bested 15 other law schools in the recent 2009 National Moot Court Competition on International Humanitarian Law sponsored by the International Committee on the Red Cross last November 18-20. Team Ateneo won as overall champion and was also given the award for Best Memorial. Regina Iustitiae’s very own Michelle Suarez (Batch 8-08) was awarded Best Mooter in the Final Rounds held at the Supreme Court En Banc Session Hall. Ateneo will be up against many of the top law schools in Asia and Australia as they represent the Philippines in the International Rounds for the Red Cross Moot Court Competition which will be held in Hong Kong, from March 5-6, 2010.</p>
-                </div>
-                <div class="about-read-more" align="center">
-                  <button type="button" class="btn-read-more"><a href="events.html" style="text-decoration: none; color: #333333;"> View More News</a></button>
-                </div>
-              </div>
-            </div>
-          </div>
 
-        </div>
-        <div class="col-sm-6">
-          <div class="container news">
-            <div class="home-news-container" align="center">
-              <div class="home-news-container-title">
-                <h1 >National Moot Court Competition on International Humanitarian Law</h1>
-                <h3 > November 18-20, 2009</h3>
-              </div>
-              <div class="home-news-container-body"> 
-                <div class="home-news-container-body-img" align="center">
-                  <img src="assets/img/news1.jpg" />
-                </div>
-                <div class="home-news-container-body-text">
-                  <p style="text-indent: 50px; text-align: justify; padding: 30px;"> Ateneo Law School bested 15 other law schools in the recent 2009 National Moot Court Competition on International Humanitarian Law sponsored by the International Committee on the Red Cross last November 18-20. Team Ateneo won as overall champion and was also given the award for Best Memorial.  Regina Iustitiae’s very own Michelle Suarez (Batch 8-08) was awarded Best Mooter in the Final Rounds held at the Supreme Court En Banc Session Hall. Ateneo will be up against many of the top law schools in Asia and Australia as they represent the Philippines in the International Rounds for the Red Cross Moot Court Competition which will be held in Hong Kong, from March 5-6, 2010. </p>
-                </div>
-                <div class="about-read-more" align="center">
-                  <button type="button" class="btn-read-more"> <a href="news.html" style="text-decoration: none; color: #333333;"> View More News</a> </button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-
-      <hr>
-    </section>
-  -->
-
+<footer>
   <section>
-    <div class="container news">
+    <div class="container-fluid" style="background-color: #461251; padding-top: 30px;">
+      <div class="footer-header" align="center">
+        <img src="assets/img/logo.png" />
+        <h4>Regina Iustitiae Sorority</h4>
+        <h5>Lorem Ipsum Here</h5>
+      </div>
+      <div class="navbar-footer" align="center" style="padding-top: 10px;">
+
         <span class="d-inline-block">
-           <hr style=" padding-right: 400px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a ;margin-bottom: 5px;" >
-           <h1 style="display: inline-block;  margin-bottom: 40px;"> News</h1>
-           <hr style=" padding-right: 400px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;"></span>
-      <div class="home-news-container" align="center">
-        <div class="home-news-container-title">
-          <h1 >National Moot Court Competition on International Humanitarian Law</h1>
-          <h3 > November 18-20, 2009</h3>
-        </div>
-        <div class="home-news-container-body"> 
-          <div class="home-news-container-body-img" align="center">
-            <img src="assets/img/news1.jpg" />
-          </div>
-          <div class="home-news-container-body-text">
-            <p style="text-indent: 50px; text-align: justify; padding: 30px;"> Ateneo Law School bested 15 other law schools in the recent 2009 National Moot Court Competition on International Humanitarian Law sponsored by the International Committee on the Red Cross last November 18-20. Team Ateneo won as overall champion and was also given the award for Best Memorial.  Regina Iustitiae’s very own Michelle Suarez (Batch 8-08) was awarded Best Mooter in the Final Rounds held at the Supreme Court En Banc Session Hall. Ateneo will be up against many of the top law schools in Asia and Australia as they represent the Philippines in the International Rounds for the Red Cross Moot Court Competition which will be held in Hong Kong, from March 5-6, 2010. </p>
-          </div>
-        </div>
-      </div>
+         <p>ABOUT</p>
+         <p>|</p>
+         <p >ACHIEVEMENTS</p>
+         <p >|</p>
+         <p >EVENTS</p>
+         <p >|</p>
+         <p >NEWS</p>
+         <p >|</p>
+         <p >ALUMNI</p>
+         <p >|</p>
+         <p >CONTACT US</p></P>
+       </span>
+     </div>
+
+     <div class="footer-community" align="center" style="padding-top: 10px;">
+      <h2> Ateneo Community</h2>
+      <span class="d-inline-block">
+       <p>ATENEO LAW SCHOOL</p>
+       <p>|</p>
+       <p >ADMISSION RESULT 2009</p>
+       <p >|</p>
+       <p >ADMISSION REQUIREMENTS</p>
+       <p >|</p>
+       <p >FAQs</p>
+     </span>
+   </div>
+
+
+   <div class="footer-body">
+    <div class="row">
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3"></div>
     </div>
-    <hr>
-  </section>
+  </div>
+</div>
 
-  <footer>
-    <section>
-      <div class="container">
-        <div class="footer-header" align="center">
-          <img src="assets/img/logo.png" />
-          <h4>REGINA IUSITIAE</h4>
-          <h5>REGINA IUSITIAE</h5>
-        </div>
-
-        <div class="footer-body">
-          <div class="row">
-            <div class="col-sm-3"></div>
-            <div class="col-sm-3"></div>
-            <div class="col-sm-3"></div>
-            <div class="col-sm-3"></div>
-          </div>
-        </div>
-      </div>
-
-    </section>
-  </footer>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</section>
+</footer>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 
