--- a/news3.html
+++ b/news3.html
@@ -59,27 +59,57 @@
       </div>
     </div>
   </section>
-  <footer>
-    <section>
-      <div class="container">
-        <div class="footer-header" align="center">
-          <img src="assets/img/logo.png" />
-          <h4>REGINA IUSITIAE</h4>
-          <h5>REGINA IUSITIAE</h5>
-        </div>
-
-        <div class="footer-body">
-          <div class="row">
-            <div class="col-sm-3"></div>
-            <div class="col-sm-3"></div>
-            <div class="col-sm-3"></div>
-            <div class="col-sm-3"></div>
-          </div>
-        </div>
+<footer>
+  <section>
+    <div class="container-fluid" style="background-color: #461251; padding-top: 30px;">
+      <div class="footer-header" align="center">
+        <img src="assets/img/logo.png" />
+        <h4>Regina Iustitiae Sorority</h4>
+        <h5>Lorem Ipsum Here</h5>
       </div>
+      <div class="navbar-footer" align="center" style="padding-top: 10px;">
 
-    </section>
-  </footer>
+        <span class="d-inline-block">
+         <p>ABOUT</p>
+         <p>|</p>
+         <p >ACHIEVEMENTS</p>
+         <p >|</p>
+         <p >EVENTS</p>
+         <p >|</p>
+         <p >NEWS</p>
+         <p >|</p>
+         <p >ALUMNI</p>
+         <p >|</p>
+         <p >CONTACT US</p></P>
+       </span>
+     </div>
+
+     <div class="footer-community" align="center" style="padding-top: 10px;">
+      <h2> Ateneo Community</h2>
+      <span class="d-inline-block">
+       <p>ATENEO LAW SCHOOL</p>
+       <p>|</p>
+       <p >ADMISSION RESULT 2009</p>
+       <p >|</p>
+       <p >ADMISSION REQUIREMENTS</p>
+       <p >|</p>
+       <p >FAQs</p>
+     </span>
+   </div>
+
+
+   <div class="footer-body">
+    <div class="row">
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3"></div>
+    </div>
+  </div>
+</div>
+
+</section>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
