--- a/about.html
+++ b/about.html
@@ -7,45 +7,13 @@
 
   	<title>REGINA IUSITIAE</title>
   	<!-- <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"> -->
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  	<link rel="stylesheet" href="assets/css/styles.css">
-  	<link rel="stylesheet" href="assets/css/ionicons.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext" rel="stylesheet">
-    <script src="assets/js/modernizr-2.8.3.min.js"></script>
-  </head>
-  <body >
-<!--     <nav class="navbar navbar-default">
-      <a class="navbar-brand" href="#">
-        <span>
-          <img src="assets/img/logo.png" style="height: 116px; width: 90px;" />
-        </span>
-        <span class="navbar-brand-title">
-         Lorem ipsum
-         <hr>
-         Lorem Ipsum
-       </span>
-     </a>
-     <div class="container">
-      <div class="navbar-header">
-       <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span><span class="icon-bar">
-      </span><span class="icon-bar"></span>
-    </button>
-  </div>
-  <div class="collapse navbar-collapse" id="navcol-1">
-   <ul class="nav navbar-nav navbar-right">
-    <li role="presentation"><a href="index.html">HOME</a></li>
-    <li role="presentation"><a href="#">ABOUT</a></li>
-    <li role="presentation"><a href="#">ACHIEVEMENTS</a></li>
-    <li role="presentation"><a href="#">EVENTS</a></li>
-    <li role="presentation"><a href="#">NEWS</a></li>
-    <li role="presentation"><a href="#">ALUMNI</a></li>
-    <li role="presentation"><a href="#">CONTACT</a></li>
-  </ul>
-</div>
-</div>
-</nav> -->
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+   <link rel="stylesheet" href="assets/css/styles.css">
+   <link rel="stylesheet" href="assets/css/ionicons.min.css">
+   <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext" rel="stylesheet">
+   <script src="assets/js/modernizr-2.8.3.min.js"></script>
+ </head>
+ <body >
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae  <hr style="margin:0px; "> Another Test  </span>  </a>
@@ -80,72 +48,68 @@
 </nav>
 
 
-<section class="container">
-
-  <div class="header-content" align="center"> 
-    <h1> SOME BANNER HERE</h1>
-    <h2> Lorem ipsum dolor sit amet</h2>
-  </div>
-  <hr size="50">
-
-</section>
 
 
 
 
 <section>
   <div class="container about">
-    <div class="row">
-      <div class="col-sm-4 about-logo">
-       <img src="assets/img/logo.png" />
+
+    <div class="container" align="center">
+      <span class="d-inline-block">
+       <hr style=" padding-right: 400px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a">
+       <img src="assets/img/logo.png" style="display: inline-block;  margin-bottom: 40px;"> 
+       <hr style=" padding-right: 400px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a"></span>
      </div>
-     <div class="col-sm-8">
+
+     <div class="container">
       <p style="text-indent: 50px; text-align: justify;"> The Regina Iustitiae Sorority was founded in 2005 by three women who were inspired by a vision. Anna Asuncion Angeles, Patricia Lee Alexandra Bautista and Anna Noreen Devanadera decided to not only form an organization but a family, specifically, a sisterhood. The women founders sought to bring into play their individual strenght to encourage excellence, support and participation in the establishment of a better Ateneo Law community and to play vital roles in the Philippine society. Its mission is clear, to forward women empowerment in the law school and to create an avenue for women advocates to achieve their full potential.</p>
 
       <p style="text-indent: 50px; text-align: justify;"> Translated to mean QUEEN OF JUSTICE, the sorority has aptly chosen purple and yellow as its official colors. Purple is often associated with womanhood, nobility and spirituality, and yellow with leadership and strength, all of which are characteristics which and ideal Regina should possess. The official Seal of Regina Iustitiae was created and designed by Andrianne Marie Alazas from now grown to Ten Batches. The Sisters of Regina excel not only as well-rounded law students but also as professional and high-caliber lawyers in their practice.</p>
 
       <p> Regina Iustitiae, Sorore Lex Atheneum. </p>
       <p>Every year is our year.</p>
-
-     <!--  <div class="about-read-more" align="center">
-
-        <button type="button" class="btn-read-more">Learn more about Regina</button>
-      </div> -->
     </div>
   </div>
 </div>
 </section>
 
 <section> 
-<div class="container mission" align="center">
-<div class="mission-header">
+  <div class="container mission" align="center">
+    <div class="mission-header">
 
-  <h1> MISSION</h1>
-</div>
-<div class="mission-body">
-<p>
-  Regina Iustitiae Sorority is an organization of women who are strong leaders, devoted to upholding justice and to excelling in the respective niches chosen by them in life; who believe that the act of one reflects that of the whole, and thus act as one through interdependence based on complete trust on one another; whose treatment of one another and of others is that of sisters to one another, that is, of being one-half of another; who, being sisters, recognize that the other is one’s superior in one way or another; and who possess consistent dedication to the organization’s goals, even keeping to oneself those communication made in utmost confidentiality. 
-</p>
-</div>
-</div>
+            <span class="d-inline-block home-event-header">
+             <hr style=" padding-right: 400px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;">
+             <p style="display: inline-block;  margin-bottom: 40px;">Mission</p>
+             <hr style=" padding-right: 400px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a;  margin-bottom: 5px;"></span>
+    </div>
+    <div class="mission-body">
+      <p style="text-indent: 50px; text-align: justify;">
+        Regina Iustitiae Sorority is an organization of women who are strong leaders, devoted to upholding justice and to excelling in the respective niches chosen by them in life; who believe that the act of one reflects that of the whole, and thus act as one through interdependence based on complete trust on one another; whose treatment of one another and of others is that of sisters to one another, that is, of being one-half of another; who, being sisters, recognize that the other is one’s superior in one way or another; and who possess consistent dedication to the organization’s goals, even keeping to oneself those communication made in utmost confidentiality. 
+      </p>
+    </div>
+  </div>
 </section>
 
 
 
 <section> 
-<div class="container vision" align="center">
-<div class="vision-header">
+  <div class="container vision" align="center">
+    <div class="vision-header">
 
-  <h1> VISION</h1>
-</div>
-<div class="vision-body">
-<p>
-     The Regina Iustitiae Sorority is an independent, non-profit organization of women from the Ateneo School of Law with the ultimate vision of being the catalyst for women empowerment not only in the law school but more importantly, in Philippine society.
-</p>
-<p>
-    Regina Iustitiae Sorority aspires to achieve this by means of an established sisterhood that leads and serves the community through justice in any of its forms.  Armed with academic excellence, legal wisdom and commitment to pursue a journey towards individual and collective intellectual and moral triumph, the members of this Sorority are envisioned to embody what women of the law should aim to be. The Regina Iustitiae Sorority will be an organization of women in the legal profession whose societal significance is both acknowledged and applauded. 
-</p>
-</div>
+            <span class="d-inline-block home-event-header">
+             <hr style=" padding-right: 400px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;">
+             <p style="display: inline-block;  margin-bottom: 40px;">Vision</p>
+             <hr style=" padding-right: 400px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a;  margin-bottom: 5px;"></span>
+    </div>
+    <div class="vision-body">
+      <p style="text-indent: 50px; text-align: justify;">
+       The Regina Iustitiae Sorority is an independent, non-profit organization of women from the Ateneo School of Law with the ultimate vision of being the catalyst for women empowerment not only in the law school but more importantly, in Philippine society.
+     </p>
+     <p style="text-indent: 50px; text-align: justify;">
+      Regina Iustitiae Sorority aspires to achieve this by means of an established sisterhood that leads and serves the community through justice in any of its forms.  Armed with academic excellence, legal wisdom and commitment to pursue a journey towards individual and collective intellectual and moral triumph, the members of this Sorority are envisioned to embody what women of the law should aim to be. The Regina Iustitiae Sorority will be an organization of women in the legal profession whose societal significance is both acknowledged and applauded. 
+    </p>
+  </div>
 </div>
 </section>
 
@@ -154,43 +118,72 @@
 
 
 <section> 
-<div class="container what-does-it-take" align="center">
-<div class="what-does-it-take-header">
+  <div class="container what-does-it-take" align="center">
+    <div class="what-does-it-take-header">
 
-  <h1>What does it take to be Regina?</h1>
-</div>
-<div class="what-does-it-take-body">
-<p>
-      A Regina embraces womanhood not as a mere lifestyle but as a mission.  As a woman of the law, a Regina does not accept mediocrity. She is not contented with excellence alone but goes beyond that by refining the very core of her person. A Regina knows how to have faith in people and, most notably, in herself. A Regina believes that she is a part of a bigger whole and as such, willingly contributes to make her mark. To be a Regina means to be passionate, constantly committed and grounded. Every Regina is a Queen in her own right, a quintessence of royalty, elegance, leadership and significance.
-</p>
+            <span class="d-inline-block home-event-header">
+             <hr style=" padding-right: 300px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;">
+             <p style="display: inline-block;  margin-bottom: 40px;">What does it to be Regina</p>
+             <hr style=" padding-right: 300px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a;  margin-bottom: 5px;"></span>
+    </div>
+    <div class="what-does-it-take-body">
+      <p style="text-indent: 50px; text-align: justify; padding-bottom: 50px;">
+        A Regina embraces womanhood not as a mere lifestyle but as a mission.  As a woman of the law, a Regina does not accept mediocrity. She is not contented with excellence alone but goes beyond that by refining the very core of her person. A Regina knows how to have faith in people and, most notably, in herself. A Regina believes that she is a part of a bigger whole and as such, willingly contributes to make her mark. To be a Regina means to be passionate, constantly committed and grounded. Every Regina is a Queen in her own right, a quintessence of royalty, elegance, leadership and significance.
+      </p>
 
-</div>
-</div>
+    </div>
+  </div>
 </section>
-
-
-
-
 <footer>
   <section>
-    <div class="container">
+    <div class="container-fluid" style="background-color: #461251; padding-top: 30px;">
       <div class="footer-header" align="center">
         <img src="assets/img/logo.png" />
-        <h4>REGINA IUSITIAE</h4>
-        <h5>REGINA IUSITIAE</h5>
+        <h4>Regina Iustitiae Sorority</h4>
+        <h5>Lorem Ipsum Here</h5>
       </div>
+      <div class="navbar-footer" align="center" style="padding-top: 10px;">
 
-      <div class="footer-body">
-        <div class="row">
-          <div class="col-sm-3"></div>
-          <div class="col-sm-3"></div>
-          <div class="col-sm-3"></div>
-          <div class="col-sm-3"></div>
-        </div>
-      </div>
+        <span class="d-inline-block">
+         <p>ABOUT</p>
+         <p>|</p>
+         <p >ACHIEVEMENTS</p>
+         <p >|</p>
+         <p >EVENTS</p>
+         <p >|</p>
+         <p >NEWS</p>
+         <p >|</p>
+         <p >ALUMNI</p>
+         <p >|</p>
+         <p >CONTACT US</p></P>
+       </span>
+     </div>
+
+     <div class="footer-community" align="center" style="padding-top: 10px;">
+      <h2> Ateneo Community</h2>
+      <span class="d-inline-block">
+       <p>ATENEO LAW SCHOOL</p>
+       <p>|</p>
+       <p >ADMISSION RESULT 2009</p>
+       <p >|</p>
+       <p >ADMISSION REQUIREMENTS</p>
+       <p >|</p>
+       <p >FAQs</p>
+     </span>
+   </div>
+
+
+   <div class="footer-body">
+    <div class="row">
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3"></div>
     </div>
+  </div>
+</div>
 
-  </section>
+</section>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
