--- a/contact.html
+++ b/contact.html
@@ -14,38 +14,6 @@
   <script src="assets/js/modernizr-2.8.3.min.js"></script>
 </head>
 <body >
-<!--   <nav class="navbar navbar-default">
-<a class="navbar-brand" href="#">
-<span>
-<img src="assets/img/logo.png" style="height: 116px; width: 90px;" />
-</span>
-<span class="navbar-brand-title">
-Lorem ipsum
-<hr>
-Lorem Ipsum
-</span>
-</a>
-<div class="container">
-<div class="navbar-header">
-<button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
-<span class="sr-only">Toggle navigation</span>
-<span class="icon-bar"></span><span class="icon-bar">
-</span><span class="icon-bar"></span>
-</button>
-</div>
-<div class="collapse navbar-collapse" id="navcol-1">
-<ul class="nav navbar-nav navbar-right">
-<li role="presentation"><a href="index.html">HOME</a></li>
-<li role="presentation"><a href="#">ABOUT</a></li>
-<li role="presentation"><a href="#">ACHIEVEMENTS</a></li>
-<li role="presentation"><a href="#">EVENTS</a></li>
-<li role="presentation"><a href="#">NEWS</a></li>
-<li role="presentation"><a href="#">ALUMNI</a></li>
-<li role="presentation"><a href="#">CONTACT</a></li>
-</ul>
-</div>
-</div>
-</nav> -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae  <hr style="margin:0px; "> Another Test  </span>  </a>
   <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,118 +45,77 @@ Lorem Ipsum
     </ul>
   </div>
 </nav>
-<section class="container">
-
-  <div class="header-content" align="center"> 
-    <h1> SOME BANNER HERE</h1>
-    <h2> Lorem ipsum dolor sit amet</h2>
-  </div>
-  <hr size="50">
-
-</section>
 
 
 
 <section>
-  <div class="container about">
-    <div class="row">
-      <div class="col-sm-4 about-logo">
-        <img src="assets/img/logo.png" />
-      </div>
-      <div class="col-sm-8">
-        <p style="text-indent: 50px; text-align: justify;"> The Regina Iustitiae Sorority was founded in 2005 by three women who were inspired by a vision. Anna Asuncion Angeles, Patricia Lee Alexandra Bautista and Anna Noreen Devanadera decided to not only form an organization but a family, specifically, a sisterhood. The women founders sought to bring into play their individual strenght to encourage excellence, support and participation in the establishment of a better Ateneo Law community and to play vital roles in the Philippine society. Its mission is clear, to forward women empowerment in the law school and to create an avenue for women advocates to achieve their full potential.</p>
+  <div class="container">
+    
+<h2>Send e-mail to someone@example.com:</h2>
 
-        <p style="text-indent: 50px; text-align: justify;"> Translated to mean QUEEN OF JUSTICE, the sorority has aptly chosen purple and yellow as its official colors. Purple is often associated with womanhood, nobility and spirituality, and yellow with leadership and strength, all of which are characteristics which and ideal Regina should possess. The official Seal of Regina Iustitiae was created and designed by Andrianne Marie Alazas from now grown to Ten Batches. The Sisters of Regina excel not only as well-rounded law students but also as professional and high-caliber lawyers in their practice.</p>
+<form action="mailto:francisgonzales.private@gmail.com" method="post" enctype="text/plain">
+Name:<br>
+<input type="text" name="name"><br>
+E-mail:<br>
+<input type="text" name="mail"><br>
+Comment:<br>
+<input type="text" name="comment" size="50"><br><br>
+<input type="submit" value="Send">
+<input type="reset" value="Reset">
+</form>
 
-        <p> Regina Iustitiae, Sorore Lex Atheneum. </p>
-        <p>Every year is our year.</p>
-
-        <div class="about-read-more" align="center">
-          <button type="button" class="btn-read-more">Learn more about Regina</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <hr>
-</section>
-
-
-<section>
-
-  <div class="container achievements">
-
-    <div class="home-achiever-container"> 
-      <div class="home-achiever-container-title">
-
-      </div>
-    </div>
   </div>
 </section>
-
-<section>
-  <div class="container events">
-    <div class="home-event-container" align="center">
-      <div class="home-event-container-title">
-        <h1>Verdict: The Biggest Med-Law Party</h1>
-        <h3>December 12, 2009</h3>
-      </div>
-      <div class="home-event-container-body">
-        <div class="home-event-container-body-img" align="center">
-          <img src="assets/img/verdict2.jpg" />
-        </div>
-        <div class="home-event-container-body-text">
-          <p style="text-indent: 50px; text-align: justify; padding: 30px;">Ateneo Law School bested 15 other law schools in the recent 2009 National Moot Court Competition on International Humanitarian Law sponsored by the International Committee on the Red Cross last November 18-20. Team Ateneo won as overall champion and was also given the award for Best Memorial. Regina Iustitiae’s very own Michelle Suarez (Batch 8-08) was awarded Best Mooter in the Final Rounds held at the Supreme Court En Banc Session Hall. Ateneo will be up against many of the top law schools in Asia and Australia as they represent the Philippines in the International Rounds for the Red Cross Moot Court Competition which will be held in Hong Kong, from March 5-6, 2010.</p>
-        </div>
-        <div class="about-read-more" align="center">
-          <button type="button" class="btn-read-more">View More</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <hr>
-</section>
-
-
-<section>
-  <div class="container news">
-    <div class="home-news-container" align="center">
-      <div class="home-news-container-title">
-        <h1 >National Moot Court Competition on International Humanitarian Law</h1>
-        <h3 > November 18-20, 2009</h3>
-      </div>
-      <div class="home-news-container-body"> 
-        <div class="home-news-container-body-img" align="center">
-          <img src="assets/img/news1.jpg" />
-        </div>
-        <div class="home-news-container-body-text">
-          <p style="text-indent: 50px; text-align: justify; padding: 30px;"> Ateneo Law School bested 15 other law schools in the recent 2009 National Moot Court Competition on International Humanitarian Law sponsored by the International Committee on the Red Cross last November 18-20. Team Ateneo won as overall champion and was also given the award for Best Memorial.  Regina Iustitiae’s very own Michelle Suarez (Batch 8-08) was awarded Best Mooter in the Final Rounds held at the Supreme Court En Banc Session Hall. Ateneo will be up against many of the top law schools in Asia and Australia as they represent the Philippines in the International Rounds for the Red Cross Moot Court Competition which will be held in Hong Kong, from March 5-6, 2010. </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <hr>
-</section>
-
 <footer>
   <section>
-    <div class="container">
+    <div class="container-fluid" style="background-color: #461251; padding-top: 30px;">
       <div class="footer-header" align="center">
         <img src="assets/img/logo.png" />
-        <h4>REGINA IUSITIAE</h4>
-        <h5>REGINA IUSITIAE</h5>
+        <h4>Regina Iustitiae Sorority</h4>
+        <h5>Lorem Ipsum Here</h5>
       </div>
+      <div class="navbar-footer" align="center" style="padding-top: 10px;">
 
-      <div class="footer-body">
-        <div class="row">
-          <div class="col-sm-3"></div>
-          <div class="col-sm-3"></div>
-          <div class="col-sm-3"></div>
-          <div class="col-sm-3"></div>
-        </div>
-      </div>
+        <span class="d-inline-block">
+         <p>ABOUT</p>
+         <p>|</p>
+         <p >ACHIEVEMENTS</p>
+         <p >|</p>
+         <p >EVENTS</p>
+         <p >|</p>
+         <p >NEWS</p>
+         <p >|</p>
+         <p >ALUMNI</p>
+         <p >|</p>
+         <p >CONTACT US</p></P>
+       </span>
+     </div>
+
+     <div class="footer-community" align="center" style="padding-top: 10px;">
+      <h2> Ateneo Community</h2>
+      <span class="d-inline-block">
+       <p>ATENEO LAW SCHOOL</p>
+       <p>|</p>
+       <p >ADMISSION RESULT 2009</p>
+       <p >|</p>
+       <p >ADMISSION REQUIREMENTS</p>
+       <p >|</p>
+       <p >FAQs</p>
+     </span>
+   </div>
+
+
+   <div class="footer-body">
+    <div class="row">
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3"></div>
     </div>
+  </div>
+</div>
 
-  </section>
+</section>
 </footer>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
